; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showwaves.c_get_log_h.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showwaves.c_get_log_h.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT16_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @get_log_h to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_log_h(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = sdiv i32 %5, 2
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @FFSIGN(i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = call i64 @FFABS(i32 %9)
  %11 = add nsw i64 1, %10
  %12 = call i32 @log10(i64 %11)
  %13 = load i32, i32* %4, align 4
  %14 = sdiv i32 %13, 2
  %15 = mul nsw i32 %12, %14
  %16 = load i64, i64* @INT16_MAX, align 8
  %17 = add nsw i64 1, %16
  %18 = call i32 @log10(i64 %17)
  %19 = sdiv i32 %15, %18
  %20 = mul nsw i32 %8, %19
  %21 = sub nsw i32 %6, %20
  ret i32 %21
}

declare dso_local i32 @FFSIGN(i32) #1

declare dso_local i32 @log10(i64) #1

declare dso_local i64 @FFABS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
